refactor: Stream 결과 수집 방식 toList()로 개선